--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "url": "postgres://eunjzloy:5VJlUE0-Df4uvGwH9IpXkt1n6-IEzf6n@hattie.db.elephantsql.com/eunjzloy"
+    "url": "postgres://lnncxooj:X2N9olEAQDu1_oA1OD4XA-mosP-lvu75@tyke.db.elephantsql.com/lnncxooj"
   },
   "test": {
     "username": "root",
